--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,12 @@ button:hover {
 }
 
 @media screen and (max-width: 710px) {
+    html {
+        scroll-snap-type: y mandatory;
+        overflow-x: hidden;
+
+    }
+
     .logo {
         position: fixed;
         top: 1%;
@@ -269,9 +275,15 @@ button:hover {
         font-size: 16px;
     }
 
+    .infos-abaixo {
+        margin-bottom: 5%;
+    }
+
     .formulario,
     .formulario-test-drive {
         width: 80%;
+        top: 35%;
+
 
     }
 
