--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,11 @@ button:hover {
 
     }
 
+    body {
+        overflow-x: hidden;
+        /* Adicione isso também no body para garantir */
+    }
+
     .logo {
         position: fixed;
         top: 1%;
